objects/tysosla__Status_Tracking__c.object
<CustomObject>
    <description>Tracks Status Changes for Cases.</description>
    <fields>
        <fullName>tysosla__Business_Hours_in_Stage__c</fullName>
        <label>Business Hours</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tysosla__Case__c</fullName>
        <description>Lookup to the Related Case.</description>
        <inlineHelpText>Lookup to the Related Case.</inlineHelpText>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Stage_Tracking</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>tysosla__Elapsed_Hours__c</fullName>
        <label>Elapsed Hours</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tysosla__Enter_Time__c</fullName>
        <label>Enter Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>tysosla__Exit_Time__c</fullName>
        <label>Exit Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>tysosla__Owner__c</fullName>
        <label>Owner</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tysosla__Status_Name__c</fullName>
        <label>Status Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Status Tracking</label>
    <nameField>
        <displayFormat>ST{0000000}</displayFormat>
        <label>Status Tracking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Status Tracking</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>